JBTM-2685 JDK9 Work